--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -21,17 +21,17 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>12</string>
+	<string>27</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>To store and use photos to share with friends.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>To take photos while you're at the conference and share</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To record audio with your videos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To share photos taken while at the conference</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
