--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,10 @@ dependencies:
   url_launcher: ^0.4.0
   shared_preferences: ^0.2.4+1
   font_awesome_flutter: 4.7.2
-  image_picker: ^0.0.2                                             # new
-  firebase_analytics: ^0.0.2                                       # new
-  firebase_auth: ^0.0.2                                            # new
-  firebase_database: ^0.0.4                                        # new
-  firebase_storage: ^0.0.2                                         # new
+  image_picker: ^0.0.2
+  firebase_analytics: ^0.0.2
+  firebase_auth: ^0.0.2
+  firebase_database: ^0.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
