Update Android project to get it to compile with API 26 and Android Studio 2.3.1 Xcode 9 updates.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,9 +14,13 @@ if (flutterRoot == null) {
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+def keystorePropertiesFile = rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     lintOptions {
         disable 'InvalidPackage'
@@ -29,7 +33,21 @@ android {
         applicationId "com.traversoft.devfestflorida"
     }
 
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
+        debug {}
+        debugRuntimeElements{}
+        debugApiElements {}
+        releaseApiElements {}
+        releaseRuntimeElements {}
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
