--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,10 @@ dependencies:
   firebase_analytics: ^0.0.2
   firebase_auth: ^0.0.2
   firebase_database: ^0.0.14
+  uuid: ^0.5.0
+
 
 flutter:
-
   uses-material-design: true
   assets:
     - assets/images/logo.png
